--- a/src/AppBundle/Resources/views/backoffice/poll/archive.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/archive.html.twig
@@ -10,7 +10,9 @@
     <div class="row justify-content-center">
         {{ knp_pagination_render(pagination) }}
     </div>
-
+    <div class="alert alert-info" role="alert">
+        <strong><i class="fa fa-info-circle"></i></strong> {{ 'admin_poll.archive.info'|trans }}
+    </div>
     <div class="row pb-1">
         {% if pagination|length == 0 %}
             <div class="col-3 mx-auto">
