--- a/src/AppBundle/Resources/views/profile/delete.html.twig
+++ b/src/AppBundle/Resources/views/profile/delete.html.twig
@@ -1,6 +1,8 @@
 {% trans_default_domain 'FOSUserBundle' %}
 {% extends "FOSUserBundle::layout.html.twig" %}
 
+{% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
+
 {% block title %}{{ 'delete_account' | trans }}{% endblock %}
 
 {% block fos_user_content %}
