--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -31,22 +31,22 @@
                 <table class="table table-bordered table-striped table-condensed">
                     <thead>
                     <tr>
-                        <th{% if pagination.isSorted('a.title') %} class="sorted"{% endif %}>
-                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.title' | trans, 'a.title') }}
+                        <th{% if pagination.isSorted('p.title') %} class="sorted"{% endif %}>
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.title' | trans, 'p.title') }}
                         </th>
                         {% if is_granted('ROLE_ADMIN') %}
-                            <th class="hidden-sm-down {% if pagination.isSorted('a.user.email') %}sorted{% endif %}">
-                                {{ knp_pagination_sortable(pagination, 'admin_poll.table.author' | trans, 'a.user.email') }}
+                            <th class="hidden-sm-down">
+                                {{ 'admin_poll.table.author' | trans }}
                             </th>
                         {% endif %}
                         <th class="hidden-sm-down">
-                            {{ 'admin_poll.table.created_at' | trans }}
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.created_at' | trans, 'p.createdAt') }}
                         </th>
                         <th class="hidden-sm-down">
-                            {{ 'admin_poll.table.updated_at' | trans }}
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.updated_at' | trans, 'p.updatedAt') }}
                         </th>
                         <th class="hidden-sm-down">
-                            {{ 'admin_poll.table.deleted_at' | trans }}
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.deleted_at' | trans, 'p.deletedAt') }}
                         </th>
                         <th>
                             {{ 'admin_poll.table.state' | trans }}
