--- a/src/AppBundle/Resources/views/backoffice/poll/archive.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/archive.html.twig
@@ -28,18 +28,18 @@
                         <th{% if pagination.isSorted('a.title') %} class="sorted"{% endif %}>
                             {{ knp_pagination_sortable(pagination, 'admin_poll.table.title' | trans, 'a.title') }}
                         </th>
-                        <th class="hidden-sm-down">
-                            {{ 'admin_poll.table.created_at' | trans }}
+                        <th class="hidden-sm-down{% if pagination.isSorted('p.createdAt') %} sorted{% endif %}">
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.created_at' | trans, 'p.createdAt') }}
                         </th>
-                        <th class="hidden-sm-down">
-                            {{ 'admin_poll.table.updated_at' | trans }}
+                        <th class="hidden-sm-down{% if pagination.isSorted('p.updatedAt') %} sorted{% endif %}">
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.updated_at' | trans, 'p.updatedAt') }}
                         </th>
-                        <th class="hidden-sm-down">
-                            {{ 'admin_poll.table.deleted_at' | trans }}
+                        <th class="hidden-sm-down{% if pagination.isSorted('p.deletedAt') %} sorted{% endif %}">
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.deleted_at' | trans, 'p.deletedAt') }}
                         </th>
                         {% if is_granted('ROLE_ADMIN') %}
-                            <th class="hidden-sm-down {% if pagination.isSorted('a.user.email') %}sorted{% endif %}">
-                                {{ knp_pagination_sortable(pagination, 'admin_poll.table.author' | trans, 'a.user.email') }}
+                            <th class="hidden-sm-down">
+                                {{ 'admin_poll.table.author' | trans }}
                             </th>
                         {% endif %}
                         <th></th>
@@ -82,9 +82,9 @@
                                 </a>
 
                                 <a href="{{ path('backoffice_poll_results', {'id': poll.id}) }}"
-                                       class="btn btn-success btn-xs-block">
-                                        <i class="fa fa-eye"></i>&nbsp;<span
-                                                class="hidden-sm-down">{{ 'admin_poll.table_values.answers' | trans }}</span>
+                                   class="btn btn-success btn-xs-block">
+                                    <i class="fa fa-eye"></i>&nbsp;<span
+                                            class="hidden-sm-down">{{ 'admin_poll.table_values.answers' | trans }}</span>
                                 </a>
                             </td>
                         </tr>
