--- a/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/poll/index.html.twig
@@ -40,6 +40,9 @@
                         <th class="hidden-sm-down{% if pagination.isSorted('p.updatedAt') %} sorted{% endif %}">
                             {{ knp_pagination_sortable(pagination, 'admin_poll.table.updated_at' | trans, 'p.updatedAt') }}
                         </th>
+                        <th class="hidden-sm-down{% if pagination.isSorted('p.deletedAt') %} sorted{% endif %}">
+                            {{ knp_pagination_sortable(pagination, 'admin_poll.table.will_be_deleted_at' | trans, 'p.deletedAt') }}
+                        </th>
                         <th>
                             {{ 'admin_poll.table.state' | trans }}
                         </th>
@@ -64,6 +67,12 @@
                             <td>
                                 {{ poll.updatedAt | localizeddate('medium', 'medium', app.request.locale) }}
                             </td>
+                            <td>
+                                {% if poll.deletedAt is not null %}
+                                    {{ poll.deletedAt | localizeddate('medium', 'medium', app.request.locale) }}
+                                {% else %}
+                                    -
+                                {% endif %}
                             <td>
                                 {% if poll.published %}
                                     {{ 'admin_poll.table_values.published' | trans }}
