--- a/src/AppBundle/Resources/views/backoffice/users/index.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/users/index.html.twig
@@ -5,7 +5,7 @@
 
 {% block main %}
     <h1 class="text-center pb-2">{{ 'users.users_list' | trans }}</h1>
-    <table class="table">
+    <table class="table  table-striped table-condensed">
         <thead>
         <tr>
             <th{% if pagination.isSorted('a.firstname') %} class="sorted"{% endif %}>
@@ -17,6 +17,9 @@
             <th class="hidden-xs-down {% if pagination.isSorted('a.email') %}sorted{% endif %}">
                 {{ knp_pagination_sortable(pagination, 'users.email' | trans, 'a.email') }}
             </th>
+            <th class="hidden-xs-down">
+                {{ 'users.roles' | trans }}
+            </th>
             <th></th>
         </tr>
         </thead>
@@ -27,6 +30,11 @@
                 <td>{{ user.firstname }}</td>
                 <td>{{ user.lastname }}</td>
                 <td class="hidden-xs-down">{{ user.email }}</td>
+                <td>
+                    {% for role in user.roles %}
+                        {{ ('roles.' ~ role) | trans }}{% if not loop.last %}, {% endif %}
+                    {% endfor %}
+                </td>
                 <td>
                     <a href="{{ path('backoffice_users_update', {'id': user.id}) }}"
                        class="btn btn-primary">
