Add possibility to configure allowed email domain for the registration

--- a/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/partial/_header.html.twig
@@ -9,6 +9,14 @@
         </li>
     </ul>
     <ul class="nav navbar-nav ml-auto">
+        {% if is_granted('ROLE_ADMIN') %}
+            <li class="nav-item">
+                <a href="{{ path('backoffice_config') }}" class="nav-link">
+                    <i class="icon-settings"></i>
+                    {{ 'sidebar.config' | trans({}, 'AppBundle') }}
+                </a>
+            </li>
+        {% endif %}
         <li class="nav-item dropdown px-1">
             <a class="nav link dropdown-toggle" data-toggle="dropdown" href="#" role="button">
                 <i class=""></i>
