--- a/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
+++ b/app/Resources/FOSUserBundle/views/Registration/confirmed.html.twig
@@ -2,9 +2,8 @@
 
 {% trans_default_domain 'FOSUserBundle' %}
 
+{% block bodyclass %}app header-fixed sidebar-fixed aside-menu-fixed aside-menu-hidden{% endblock %}
+
 {% block fos_user_content %}
     <p>{{ 'registration.confirmed'|trans({'%username%': user.username}) }}</p>
-    {% if targetUrl %}
-    <p><a href="{{ targetUrl }}">{{ 'registration.back'|trans }}</a></p>
-    {% endif %}
 {% endblock fos_user_content %}
