--- a/src/AppBundle/Resources/views/backoffice/users/update.html.twig
+++ b/src/AppBundle/Resources/views/backoffice/users/update.html.twig
@@ -13,6 +13,7 @@
 
             {{ form_row(form.firstName) }}
             {{ form_row(form.lastName) }}
+            {{ form_row(form.email) }}
 
             <div class="text-center">
                 {{ form_row(form.submit) }}
